# jager

./: .envrc  Cargo.nix  Cargo.toml  build.rs  default.nix  flake.nix
backend/: Cargo.toml
backend/src/: database.rs  esi.rs  jager_redis.rs  killmail_processing.rs  lib.rs  logging.rs  stats_processing.rs  zkill.rs
backend/src/entity/: alliances.rs  attackers.rs  character_public_info.rs  corporations.rs  esi_categories.rs  esi_groups.rs  esi_types.rs  factions.rs  killmail_positions.rs  killmails.rs  mod.rs  prelude.rs  victims.rs
datamodels/: Cargo.toml
datamodels/src/: esi_models.rs  lib.rs
jager-client/: Cargo.toml
jager-client/src/: main.rs
migrations/: 20210922210554_initial.sql  20210930035354_add_killmails.sql  20211004204419_add_corporations_and_alliances.sql  20211221063600_add_cpi_last_updated.sql
src/: database.rs  esi.rs  esi_models.rs  killmail_processing.rs  lib.rs  organization_processing.rs  stats_processing.rs  zkill.rs
src/entity/: alliances.rs  attackers.rs  character_public_info.rs  corporations.rs  esi_categories.rs  esi_groups.rs  esi_types.rs  factions.rs  killmail_positions.rs  killmails.rs  victims.rs
