[package]
name = "jager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bulk_harvester"
path = "src/bin/bulk_harvester.rs"


[dependencies]
sea-orm = { version = "0.2.3", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
log = "0.4.0"
env_logger = "0.9.0"
dotenv = "0.9.0"
tokio = { version = "1.11.*", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11.*", features = ["json"] }
futures = "0.3.*"
pbr = "1.0.4"
rocket = { version = "0.5.0-rc.1", features = ["json"]}
druid = { version = "0.7.0", features = ["im"] }
clipboard = { version = "0.5.0" }
websocket-lite = "0.5.0"
git-version = "0.2.1"