[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket-lite = "0.5.0"
log = "0.4.0"
fern = { version = "0.6.0", features = ["colored"]}
datamodels = { path = "../datamodels"}
tokio = { version = "1.11.*", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sea-orm = { version = "0.7.1", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
dotenv = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.*", features = ["json"] }
futures = "0.3.*"
pbr = "1.0.4"
rocket = { version = "0.5.0-rc.1", features = ["json"]}
redis = { version = "0.21.*", features = ["default", "cluster", "connection-manager", "tokio-comp", "aio"] }
async-trait = { version = "0.1" }


[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"