[package]
name = "jager-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
tokio = { version = "1.11.*", features = ["full"] }
reqwest = { version = "0.11.*", features = ["json"] }
druid = { version = "0.7.0", features = ["im"] }
clipboard = { version = "0.5.0" }
futures = "0.3.*"
serde = { version = "1.0", features = ["derive"]}
